<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/pref_online_search">

        <android.support.v7.preference.Preference
            android:dialogTitle="@string/pref_online_search_limit_dialog_title"
            android:entries="@array/pref_search_limit"
            android:entryValues="@array/pref_search_limit"

            android:key="pref_search_quick_limit"
            android:summary="@string/pref_online_search_quick_limit_summery"
            android:title="@string/pref_online_search_quick_limit"/>

        <android.support.v7.preference.Preference
            android:dialogTitle="@string/pref_online_search_limit_dialog_title"
            android:entries="@array/pref_search_limit"
            android:entryValues="@array/pref_search_limit"

            android:key="pref_search_full_limit"
            android:summary="@string/pref_online_search_full_limit_summery"
            android:title="@string/pref_online_search_full_limit"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/pref_online_download">

        <!--<android.support.v7.preference.Preference-->
            <!--android:dialogTitle="@string/pref_online_download_max_concurrent_dialog_title"-->
            <!--android:entries="@array/pref_download_max_concurrent"-->
            <!--android:entryValues="@array/pref_download_max_concurrent"-->

            <!--android:key="pref_download_max_concurrent"-->
            <!--android:summary="@string/pref_online_download_max_concurrent_summery"-->
            <!--android:title="@string/pref_online_download_max_concurrent"/>-->

        <android.support.v7.preference.Preference
            android:dialogTitle="@string/pref_online_download_quality_dialog_title"
            android:entries="@array/pref_download_qualities"
            android:entryValues="@array/pref_download_qualities"

            android:key="pref_download_default_quality"
            android:summary="@string/pref_online_download_quality_summery"
            android:title="@string/pref_online_download_quality"/>

        <android.support.v7.preference.Preference
            android:dialogTitle="@string/pref_online_download_storage_dialog_title"
            android:entries="@array/pref_downloads_location"
            android:entryValues="@array/pref_downloads_location"

            android:key="pref_download_storage"
            android:summary="@string/pref_online_download_storage_summery"
            android:title="@string/pref_online_download_storage"/>

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_download_wifi_only"
            android:summary="@string/pref_online_download_wifi_only_summery"
            android:title="@string/pref_online_download_wifi_only"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>